Add option to replace image in DAM from the Internet; Load images from internet with the same logic
